[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "restriction-module"
version = "0.1.0"
description = "A Synapse module for restricting user actions like leaving rooms or deactivating accounts."
dependencies = [
    "matrix-synapse>=1.100.0",
    "attrs",  # For config class; remove if not needed
]
requires-python = ">=3.9"

[tool.setuptools]
packages = ["restriction_module"]
