[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "restriction_module"  # Changed to underscore to avoid potential hyphen-related import/install issues
version = "0.1.0"
description = "A Synapse module for restricting user actions like leaving rooms or deactivating accounts."
dependencies = [
    "matrix-synapse>=1.100.0",  # Updated for modern Synapse (adjust if needed for your version)
]
requires-python = ">=3.9"

[tool.setuptools]
packages = ["restriction_module"]
